test/runnable/eqtest.cx
module eqtest;

macro import cx.macros.assert;

void main() {
    char ch = "A"[0];
    assert(ch == "A"[0]);
}
