test/fail_compilation/afl_4.cx
module afl_4;

void main() { string s = "
